<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--按钮-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/linear_progress"
        android:onClick="startLinearProgress"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/circle_progress"
        android:onClick="startCircleProgress"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/color_shade"
        android:onClick="startColorShade"
        />

    <!--分割线-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_red_dark"/>

    <!--按钮-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/ball_fall"
        android:onClick="startBallFallAni"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/x_ball_fall"
        android:onClick="startXBallFallAni" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/point_dece_acce"
        android:onClick="startDeceAcce" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/custom_point_translate"
        android:onClick="startPointTranslate" />

</LinearLayout>